name:           tetris-hs
version:        0.1.0
homepage:       https://github.com/PascalInn/tetris-hs
author:         Tianchen Gu (backend), Cuiyang Ding (UI)
build-type:     Simple
cabal-version:  >=1.10

executable tetris
  main-is:          Main.hs
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:    base,
                    network,
                    directory,
                    filepath,
                    brick,
                    containers,
                    lens,
                    random,
                    vty,
                    bytestring,
                    text
  default-language: Haskell2010
